static/css/page-user.css
/**
 * Stylesheet entry point for pages with body-user
 * See:
 * - openlibrary/templates/history_framepage.html
 * - openlibrary/templates/history_framenav.html
 * Runs on pages
 * - /about/vision
 * - /account
 * - /account/books/want-to-read
 * - /account/books/notes
 * - /account/books/observations
 * - /account/email/forgot-ia
 * - /account/login
 * - /account/loans
 * - /account/privacy
 * - /account/import
 * - /advancedsearch
 * - /authors/OL22098A/Lewis_Carroll
 * - /authors/OL22098A/Lewis_Carroll/edit
 * - /authors/OL22098A/Lewis_Carroll?m=history
 * - /books/add
 * - /books/OL24197475M/The_complete_works_of_Mark_Twain.
 * - /books/OL13517105M/Alice_im_Spiegelland/edit
 * - /borrow
 * - /contact
 * - /data
 * - /help
 * - /lists
 * - /merges
 * - /people/admin
 * - /people/openlibrary9157/lists
 * - /read
 * - /recentchanges
 * - /search/authors
 * - /subjects
 * - /works/OL53924W/The_complete_works_of_Mark_Twain
 * - /works/OL1930026W/No_easy_walk?m=diff&b=5
 */
@import "components/flash-messages.css";
@import "components/provider-table.css";

body {
  background-color: var(--beige);
}
/* stylelint-disable selector-max-specificity */
div#background {
  width: 100%;
  background-color: var(--beige);
}
/* stylelint-enable selector-max-specificity */
div.message {
  float: left;
  clear: both;
  width: 100%;
  margin-bottom: 15px;
  background: var(--light-yellow);
}
div.message p {
  font-family: var(--font-family-body);
}
div.siteSearch {
  -webkit-box-ordinal-group: 4;
  -ms-flex-order: 3;
  order: 3;
}
div.siteSearch.darker {
  background-color: var(--grey-f3f3f3);
  padding-right: 22px;
}
/* stylelint-disable selector-max-specificity */
div#revertLink,
div#editHistory {
  display: none;
}
/* stylelint-enable selector-max-specificity */
div#subjectsPage {
  columns: 2;
}

/* @width-breakpoint-tablet = 768px */
@media only screen and (min-width: 768px) {
  div#subjectsPage {
    columns: 4;
  }
}

div#subjectsPage ul {
  display: inline-block;
}

div.lists {
  display: flex;
  flex-wrap: wrap;
}

.multi-input-autocomplete--author .mia__input {
  display: flex;
}

th.toggle-all {
  background: var(--primary-blue);
}

.div-class {
  margin-top: 20px;
  display: inline-block;
  height: 360px;
  overflow: auto;
  width: 100%;
}

.import-table {
  border: 2px;
}
.import-table th {
  padding: 5px 10px;
}
.import-table td {
  padding: 5px 10px;
}
.import-table thead th {
  position: sticky;
  top: 0;
  background-color: var(--white);
}
.import-table tbody {
  width: 100%;
}
.import-table tbody tr {
  background-color: var(--white);
}
.my-imports {
  width: 100%;
}
.import-export {
  display: flex;
  flex-direction: column;
}
.import-export__section {
  padding: 0 10px;
}

#myProgress {
  margin-top: 5px;
  border-radius: var(--border-radius-card);
  width: 100%;
  background-color: var(--lightest-grey);
}

#myBar {
  width: 0%;
  border-radius: var(--border-radius-card);
  padding: 4px;
  background-color: var(--green);
  text-align: center;
  color: var(--white);
}

.import-buttons {
  display: flex;
}

.import-table tbody tr:nth-child(odd) {
  background-color: var(--lightest-grey);
}

.error-imported {
  font-weight: bold;
  color: var(--red);
}

.success-imported {
  color: var(--green);
  font-weight: bold;
}

tr.table-row.selected {
  border: 2px solid var(--green);
}

.olform--decoration {
  margin: 20px 0;
  border: 2px solid var(--lightest-grey);
  padding: 20px;
  border-radius: 5px;
}

.login-big-or {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  max-width: 600px;
}

.login-big-or::before,
.login-big-or::after {
  content: "";
  display: block;
  flex: 1;
  border-bottom: 1px solid currentColor;
  transform: translateY(-50%);
}

textarea.toc-editor {
  white-space: pre;
}

@import "components/ol-message.css";
/* Import styles for fulltext-search-suggestion card */
@import "components/fulltext-search-suggestion.css";
/* Import styles for fulltext-search-suggestion card item */
@import "components/fulltext-search-suggestion-item.css";
/* Import styles for fulltext-search-suggestion card item snippet */
@import "components/fulltext-snippet.css";
/* Import styles for author infobox */
@import "components/author-infobox.css";
/* Import all common components */
@import "legacy.css";
/* Import styles specific to the BorrowTable for user pages */
@import "legacy-borrowTable-adminUser.css";
/* Import styles for notes and observations views */
@import "components/notes-view.css";
/* Import styles for community merge request views */
@import "components/merge-request-table.css";
/* Import styles for want-to-read buttons */
@import "legacy-tools.css";
@import "components/generic-dropper.css";
@import "components/mybooks-dropper.css";
/* Import styles for search box */
@import "components/searchbox.css";
/* Import styles for sort options */
@import "components/sort-dropper.css";
@import "components/pagination.css";

